# CodeSamples

./: .gitignore  CodeBlocks.workspace  CodeBlocks.workspace.layout  README.md
ADF/: .gitignore
ADF/SimpleTable/: SimpleTable.jws
ARM/C/: Makefile  minimal.c
Algorithms/Array/: SparseArray.java
Algorithms/Generators/: .project
Algorithms/Parser/Antlr3_C/CSSParser/example/: CMakeLists.txt  main.cpp
Algorithms/Parser/Antlr3_C/CSSParser/parser/: CMakeLists.txt  CSS.g
Algorithms/Parser/Antlr3_C/ExpressionParser/example/: CMakeLists.txt  main.cpp
Algorithms/Parser/Antlr3_C/ExpressionParser/parser/: CMakeLists.txt  Expression.g  ExpressionAST.cpp  ExpressionAST.g  ExpressionAST.h  ExpressionEvaluator.cpp  ExpressionEvaluator.h  SymbolTable.cpp  SymbolTable.h
Algorithms/Parser/Antlr3_C/SimpleParser/example/: CMakeLists.txt  main.cpp
Algorithms/Parser/Antlr3_C/SimpleParser/parser/: CMakeLists.txt  Simple.g
Algorithms/Parser/libclangSample/: CMakeLists.txt  main.cpp
Algorithms/Sort/: Braindeadsort.cpp  Braindeadsort.h  Makefile  Quicksort.cpp  Quicksort.h  SimpleSort.cpp  Simplesort.cpp  Simplesort.h  SortAlgorithm.cpp  SortAlgorithm.h
Algorithms/Tree/: .classpath  AsciiVisualization.txt  Negative.tree  Sample1.tree  Sample2.tree
Android/HelloWorld/: .gitignore  gradle.properties
Asm/: README
Asm/6510/: hello.asm
Asm/MiniBoot/: .gitignore  Makefile  createboot.c  main.c  minimal.asm
Asm/masm_win32/: Makefile  helloworld.asm
Asm/nasm_linux_32/: Makefile  helloworld.asm
Asm/nasm_linux_64/: Makefile  helloworld.asm
Asm/nasm_win32/: helloworld.asm
C++/Array2D/: .cproject  .project  Array2D.cpp  Array2D.h  Array2Dinstances.cpp  main.cpp
C++/C64disc/: C64disc.cbp  CMakeLists.txt  hello.prg  irq.prg  main.cpp  raster.prg  sample.prg
C++/Snippets/: .cproject  .project  Bits16.cpp  Bits16.h  Samples.cpp  Snippets.cbp  array.c  calc.cpp  colorManip.cpp  colorManip.h  enumSample.cpp  foreach.cpp  initializer.cpp  initializer.h  less.cpp  main.cpp  mapSample.cpp  outputSample.cpp  shapeOperator.cpp  sizeofSample.cpp  vtableSample.cpp
C++/floatingpoint/: Makefile  float.cpp
C/AES/: .cproject  .project  AES.cbp
C/C128/: Makefile  main.c
C/C99/: C99.cbp  inline.c  main.c  universalidentifier.c
C/SQLite/: CMakeLists.txt  SQLiteSample.c
C/SharedLib/: CMakeLists.txt  pathmapper.c
C/String/: CMakeLists.txt  Makefile  String.c  main.c
C/bare/: Makefile  add.c  ldscript.txt  main.c  start.asm
C/benchmark/: Makefile  benchmark.c
C/corehandler/: Makefile  handler.c  handler.sh
C/floatingpoint/: float.cpp
C/hexdump/: .cproject  .project  CMakeLists.txt  HexDump.cbp
C/libdvdread/: CMakeLists.txt  DVDStream.cpp  Socket.cpp  Socket.h
C/memory/: Makefile  memory.c  sysconf.c
C/minimal/: Makefile  minimal.c
C/readdir/: Makefile  readdir.c
C/shellcode/: Makefile  exploitable.c
C/snippets/: Makefile  blue.c  const.c  float2.c  mkpasswd  popen.c  ptrAlias.c  readdir.c  wrapFputs.c
CAD/: AluWinkel15x15x2.FCStd  AluWinkelGebohrt.FCStd  Assembly1.FCStd  Blumenkasten.FCStd  Blumentopf.FCStd  Blumentopf2.FCStd  Carport.FCStd  Ringkerntrafo.FCStd  Test.FCStd  Test.step
CAD/Krippe/: Dach.FCStd  Krippe.FCStd  Rueckteil.FCStd  Seitenteil.FCStd  Vorderteil.FCStd
CAD/SimpleAssembly/: Assembly.FCStd  Profile.FCStd  rendering.FCStd
EffectiveC++/: .cproject  .project
EffectiveC++/Introduction/: construct.cpp  explicit.cpp  function.cpp
EffectiveC++/Item2/: const.cpp
EffectiveC++/Item3/: Const.cpp  ConstCast.cpp  LogicalConst.cpp  Makefile
EffectiveC++/Item4/: Directory.cpp  Directory.h  FileSystem.cpp  FileSystem.h  Makefile  StaticInitOrder.cpp
EffectiveJava2/: .classpath  .gitignore  .project
Electronics/Basics/: Transistor.sch  opamp.sch
Electronics/LTSpice/: .gitignore  AstabMultivib.asc  Makefile  OpAmpAmplifier.asc  OpAmpInvert.asc  OpAmpOszillator.asc  OpAmpRegler.asc  OpAmpSingle.asc  OpAmpWienBridge.asc
Groovy/: first.groovy
Groovy/Playground/: .classpath  .project
Haskell/: Makefile  helloMulticore.hs
J2EE/ServletSample/: .classpath
J2EE/ServletSample_2.5/: .project
J2EE/ServletSample_3.0/: .project
Java/ASMSample/: .classpath  .project
Java/AWSQuery/: .classpath  .project
Java/AgentTest/: .classpath  .gitignore  .project  AgentTest.jardesc  README.txt  build.xml
Java/Applet/: .classpath  .gitignore  .project  README.txt  antenv.cmd  appletsecurity.policy  build.xml
Java/AspectJ/: .project
Java/AttachAPI/: .project  Manifest.mf
Java/Collections/: .gitignore  build.gradle  settings.gradle
Java/ColorizedLog/: .gitignore  build.gradle
Java/Enums/: .classpath
Java/FloatTest/: FloatTest.jws
Java/General/: .classpath  .project
Java/JAAS/: .gitignore  kerberos.policy  kerberos.policy.tpl  ldap.policy  local.policy  login.config  login.config.tpl  security.properties  security.properties.tpl
Java/JCE/: .classpath  .gitignore  .project  SecurityJar.jardesc  mykeys
Java/JDBC/: .classpath  database.properties.tpl
Java/JNDI/: .gitignore  .project  ldap.properties.tpl
Java/JNI/: .gitignore  .project
Java/JSoup/: .classpath  .project
Java/JUnitSamples/: .project
Java/Java2COM/: .classpath  .project  Excel.idl  README  Sample.docx  Sample.vsd  Sample.xls  antenv8.sh  build.xml  idlparser.properties  visio.idl
Java/Java8/: .classpath  .project
Java/Java9/: .classpath  build.cmd
Java/Java9Module/: .project
Java/JavaFXSample/: .classpath  .project  (+4 more)
Java8/: .project  build.xml  run
LDAP/: createDatabase.sh  database.ldif  deleteDIT.sh  domain.ldif  genPassword.sh  importData.sh  modify.sh  password.ldif  people.ldif  persons.ldif  search.sh  setConfigPass.ldif
Math/: sinus.wxm
QNumber/: .project  Q15Number.cpp
Qt/: .gitignore
SQL/: .project  Notes.txt
Shell/: .project
Tools/: .classpath
Tools/Profile/example/: CMakeLists.txt  TestProfile.cpp
Tools/Profile/profile/: CMakeLists.txt  UnixProfile.h  Win32Profile.h
Windows/: .cproject  .project
Windows/memoryMonitor/: CMakeLists.txt  monitor.c  monitor.cpp  monitor.h  testMonitor.c
nodistrib/: .gitignore  getfiles.sh
(+1455 files in other folders)
